environments/dev/kubeflow/kubeflow_manifests/jupyter-web-app-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"jupyter-web-app","kustomize.component":"jupyter-web-app"},"name":"jupyter-web-app-deployment","namespace":"kubeflow"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"jupyter-web-app","kustomize.component":"jupyter-web-app"}},"template":{"metadata":{"labels":{"app":"jupyter-web-app","kustomize.component":"jupyter-web-app"}},"spec":{"containers":[{"env":[{"name":"APP_PREFIX","value":"/jupyter"},{ [...]
  creationTimestamp: "2024-03-23T18:17:32Z"
  generation: 2
  labels:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
  name: jupyter-web-app-deployment
  namespace: kubeflow
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jupyter-web-app
      kustomize.component: jupyter-web-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jupyter-web-app
        kustomize.component: jupyter-web-app
    spec:
      containers:
        - env:
            - name: APP_PREFIX
              value: /jupyter
            - name: UI
              value: default
            - name: USERID_HEADER
              value: kubeflow-userid
            - name: USERID_PREFIX
            - name: APP_SECURE_COOKIES
              value: "false"
          image: docker.io/kubeflownotebookswg/jupyter-web-app:v1.8.0
          imagePullPolicy: IfNotPresent
          name: jupyter-web-app
          ports:
            - containerPort: 5000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /etc/config
              name: config-volume
            - mountPath: /src/apps/default/static/assets/logos
              name: logos-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: jupyter-web-app-service-account
      serviceAccountName: jupyter-web-app-service-account
      terminationGracePeriodSeconds: 30
      volumes:
        - configMap:
            defaultMode: 420
            name: jupyter-web-app-config-7tkbmh828d
          name: config-volume
        - configMap:
            defaultMode: 420
            name: jupyter-web-app-logos
          name: logos-volume
